<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btnStartTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_training"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnTrainingHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_training_history"
        android:layout_gravity="center"/>
</LinearLayout>
