<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Speed Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="24sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/speedChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_initial_text"
            android:textSize="20sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorSecondary"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textMaxSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_speed_initial_text"
            android:textSize="20sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorSecondary"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>


        <!-- Stroke Rate Section -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorSecondary"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stroke_rate"
            android:textSize="24sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/strokeRateChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textStrokeRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stroke_rate_initial_text"
            android:textSize="20sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorSecondary"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textMaxStrokeRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_stroke_rate_initial_text"
            android:textSize="20sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorSecondary"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- Tilt Section -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorSecondary"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tilt"
            android:textSize="24sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/tiltChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textTilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tilt_initial_text"
            android:textSize="20sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorSecondary"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textAvgTilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avg_tilt_initial_text"
            android:textSize="20sp"
            android:fontFamily="@font/sofia_sans_bold"
            android:textColor="?attr/colorSecondary"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <!-- Stop Button -->
        <Button
            android:id="@+id/btnStopTraining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorError"
            android:fontFamily="@font/sofia_sans_bold"
            android:paddingVertical="12dp"
            android:stateListAnimator="@null"
            android:text="@string/stop_training"
            android:textColor="?attr/backgroundColor"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginBottom="28dp"/>

    </LinearLayout>
</ScrollView>